--- a/style.css
+++ b/style.css
@@ -14,27 +14,41 @@
 	height: 30px;
 }
 
-.container-1 {
+/* .container-1 { */
+	#foodslideshow1 {
 	float: left;
 	width: 200px;
 	border: groove 20px rgb(11, 174, 250);
 	height: 400px;
 }
 
-.container-1 img {
+/* .container-1 img { */
+	img{
 	height: 360px;
 }
 
-.container-2 {
+/* .container-2 { */
+	#foodslideshow2 {
 	float: right;
 	width: 200px;
 	border: groove 20px rgb(11, 174, 250);
 	height: 400px;
 }
 
-.container-2 img {
+/* .container-2 img {
 	height: 360px;
+} */
+
+/*restaurant response cards*/
+.title {
+		line-height: 1.5;
+		font-size: 24px;
+		background-color:  rgb(11, 174, 250);
 }
+.card-body a {
+	word-break: break-all;
+
+  }
 
 .wrapper {
 	position: absolute;
