--- a/style.css
+++ b/style.css
@@ -39,17 +39,6 @@
 	height: 360px;
 } */
 
-/*restaurant response cards*/
-.title {
-		line-height: 1.5;
-		font-size: 24px;
-		background-color:  rgb(11, 174, 250);
-}
-.card-body a {
-	word-break: break-all;
-
-  }
-
 .wrapper {
 	position: absolute;
 	top: 40%;
@@ -94,3 +83,7 @@
 	right: 42%;
 	font-size: 16px;
 }
+ .restaurant-table {
+	 display: flex;
+	 flex-wrap: wrap;
+ }
